# it3385-MLOps-alda-yingqi

./: README.md  alda_flask.py  alda_input.html  anomaly_detection.pkl  app.py  model.py  mushroom-pipeline.pkl  requirements.txt  yq_flask.py
mlops/: pyproject.toml
mlops/.dvc/: config
mlops/conf/: main.yaml
mlops/data/: .gitignore  02_mushroom_species_data.csv.dvc  03_transaction_records.csv.dvc
mlops/src/anomaly_detection/: anomaly_detection.pkl  requirements.txt  yq_app.py
mlops/src/anomaly_detection/mlruns/0/: meta.yaml
mlops/src/anomaly_detection/mlruns/827913465795975677/: meta.yaml
mlops/src/anomaly_detection/mlruns/827913465795975677/3fec9795f94842f0ad6b54c789ba29ad/: meta.yaml
mlops/src/anomaly_detection/mlruns/827913465795975677/3fec9795f94842f0ad6b54c789ba29ad/metrics/: TT
mlops/src/anomaly_detection/mlruns/827913465795975677/3fec9795f94842f0ad6b54c789ba29ad/tags/: Run ID  Run Time  URI  mlflow.log-model.history  mlflow.parentRunId  mlflow.source.name
mlops/src/anomaly_detection/mlruns/827913465795975677/fc724830a7ec48cdaeedfd17424e64c4/: meta.yaml
mlops/src/anomaly_detection/mlruns/827913465795975677/fc724830a7ec48cdaeedfd17424e64c4/artifacts/: Transformation Pipeline.pkl
mlops/src/anomaly_detection/mlruns/827913465795975677/fc724830a7ec48cdaeedfd17424e64c4/params/: Experiment Name  (+2 more)
mlops/src/anomaly_detection/models/: yq_model.py
mlops/src/anomaly_detection/static/: yq_styles.css
mlops/src/anomaly_detection/templates/: yq_index.html
mlops/src/classification/: alda_app.py
mlops/src/classification/templates/: alda_input.html
(+14 files in other folders)
